# Huanvae-Chat-Rust

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml  setup_podman_mirrors.sh  setup_rust_mirrors.sh  test_all_features.sh  当前env  测试问题分析.md
MinIO/: README.md  data.md
MinIO/data/.minio.sys/: format.json
Nginx/: README.md  nginx.conf  nginx.conf.template
PostgreSQL/: 数据结构说明.md
PostgreSQL/data/: postmaster.pid
PostgreSQL/data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
PostgreSQL/data/pg_xact/: 0000
PostgreSQL/init/: 01-schema.sql  01_core_tables.sql  02-add-profile-fields.sql  02_auth_system.sql  03-add-friend-messages.sql  03_friend_system.sql  04_file_system.sql  05_file_records.sql  05_indexes.sql  06_file_uuid_mapping.sql  06_group_system.sql  07_friendships_tables.sql  07_message_optimization.sql  08_additional_indexes.sql  09_friend_messages_file_uuid.sql  README.md
docs/webrtc/: ICE服务器配置.md
src/: README.md  app_state.rs  config.rs  lib.rs  main.rs
src/auth/: errors.rs  mod.rs  用户认证.md
src/auth/handlers/: README.md  login.rs  logout.rs  mod.rs  refresh_token.rs  register.rs  revoke_device.rs  routes.rs
src/auth/middleware/: README.md  auth_guard.rs  mod.rs
src/common/: README.md  errors.rs  message_archive_service.rs  mod.rs  response.rs
src/friends/: README.md  mod.rs
src/friends_messages/: README.md  mod.rs
src/group_messages/: README.md  mod.rs
src/groups/: README.md  mod.rs
src/profile/: README.md  mod.rs
src/storage/: README.md  client.rs  config.rs  mod.rs
src/turn/: README.md  mod.rs
src/webrtc_room/: README.md  mod.rs
src/websocket/: README.md  mod.rs
test-web/: README.md  app-modular.js  app.js  index.html  room.html  styles.css  sw.js  token-manager.js  token-test.html
test-web/modules/: auth.js  friends.js  messages.js  state.js  storage.js  ui.js  utils.js
turn-agent/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.runtime  README.md  compose.build.yaml  compose.yaml
turn-agent/config/: turnserver.conf.template
turn-agent/scripts/: health-check.sh  setup.sh
turn-agent/src/: config.rs  coordinator.rs  coturn.rs  main.rs  metrics.rs  protocol.rs
接口调取文档/: README.md
接口调取文档/auth/: 接口功能.md  用户登录注册鉴权部分.md
接口调取文档/friends/: 接口功能.md
接口调取文档/group_messages/: 群消息.md
接口调取文档/groups/: 群聊管理.md
接口调取文档/messages/: 好友消息.md
接口调取文档/profile/: 个人资料管理.md
接口调取文档/storage/: 文件存储管理.md
接口调取文档/webrtc/: WebRTC房间.md
(+258 files in other folders)
