[package]
name = "turn-agent"
version = "0.1.0"
edition = "2024"
description = "TURN Server Agent - 连接主服务器并管理 Coturn 配置"

[dependencies]
# 异步运行时
tokio = { version = "1.48.0", features = ["full"] }

# WebSocket 客户端
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"

# TLS (明确指定 ring 作为加密后端)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# 时间
chrono = { version = "0.4.42", features = ["serde"] }

# 日志
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# 配置
dotenvy = "0.15.7"

# 系统指标
sysinfo = "0.37.2"

# URL 解析
url = "2.5.7"

# UUID 生成
uuid = { version = "1.19.0", features = ["v4"] }

# 错误处理
thiserror = "2.0.17"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
